data capture screen working

--- a/src/app.css
+++ b/src/app.css
@@ -1,1 +1,8 @@
 @import 'tailwindcss';
+
+:root {
+  --toastContainerTop: auto;
+  --toastContainerRight: 20px;
+  --toastContainerBottom: 2rem;
+  --toastBarHeight: 0
+}
