--- a/src/app.css
+++ b/src/app.css
@@ -6,3 +6,9 @@
   --toastContainerBottom: 2rem;
   --toastBarHeight: 0
 }
+
+@layer components {
+  .input-base {
+    @apply border rounded-md px-3 py-2 bg-slate-600 text-slate-100  shadow-sm focus:outline-none focus:ring-2 focus:ring-slate-200 focus:border-slate-200;
+  }
+}
