--- a/src/app.css
+++ b/src/app.css
@@ -9,7 +9,7 @@
 
 @layer components {
   .input-base {
-    @apply border rounded-md px-3 py-2 md:max-w-1/3 bg-slate-600 text-slate-100  shadow-sm focus:outline-none focus:ring-2 focus:ring-slate-200 focus:border-slate-200;
+    @apply border rounded-md px-3 py-2 bg-slate-600 text-slate-100  shadow-sm focus:outline-none focus:ring-2 focus:ring-slate-200 focus:border-slate-200;
   }
 
   .btn {
